--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1>Hi there, I'm Erika Chunzho!</h1>
 				<p>I'm best known as a <em>AFSE</em> student. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
