--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Erika Chunzho</title>
-			<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Erika Chunzho!</h1>
-				<p>I'm best known as a <em>AFSE</em> student. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:erikac2875@afsenyc.org">email</a></li>
-        		<li><a href="https://github.com/erikac2875">github.com/erikac2875</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Erika Chunzho
+---
+<div class="blurb">
+	<h1>Hi there, I'm Erika Chunzho!</h1>
+	<p>I'm best known as a <em>AFSE</em> student. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
