--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,2 @@
-Hi My name is Erika Chunzho.
+Hello everyone!
+      My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering. 
