--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,6 @@
 <h1>Hello everyone!</h1>
       
-My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering. I am kind, caring, helpful, funny(sometimes)
-I was born in South America, Ecuador. I arrived in New York in 2012. 
-
+<h2>My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering.
+      I am kind, caring, helpful, funny(sometimes) I was born in South America, Ecuador.
+      I arrived in New York in 2012.
+</h2>
