--- a/about/index.html
+++ b/about/index.html
@@ -1,9 +1,9 @@
 <h1>Hello everyone!</h1>
       
-<h5>My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering(AFSE).
+<p>My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering(AFSE).
       I am kind, caring, helpful, funny(sometimes) I was born in South America, Ecuador.
       I arrived in New York in 2012, the same year AFSE started. When I arrived
       I was fourth grader in John H. Finley Campus School, PS/MS 129. I graduated in 
       2017 from the same school. 
       
-      </h5>
+      </p>
