--- a/about/index.html
+++ b/about/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: About Erika Chunzho
+---
+
 <h1>Hello everyone!</h1>
       
 <p>My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering(AFSE).
