--- a/cv/index.html
+++ b/cv/index.html
@@ -3,13 +3,13 @@ layout: default
 title: About Erika Chunzho
 ---
 <div class="cv">
-		<a href="#" class="download" title="Download CV as PDF">Download CV</a>			
+		<a href="#" class="download" title="">Download CV</a>			
 					<h1>Erika CHunzho</h1>
 					<address>
 					<strong></strong><br>
 					<br>
 					<br>
-					<abbr title="phone">P:</abbr> <br>
+					<abbr title="phone"></abbr> <br>
 					<span class="obfuscate">erikac2875@afsenyc.org</span>
 					</address>
 
