--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout: default
 title: About Erika Chunzho
 ---
 <div class="cv">
-		<a href="#" class="download" title="">Download CV</a>			
+		<a href="#" class="download" title=""></a>			
 					<h1>Erika CHunzho</h1>
 					<address>
 					<strong></strong><br>
