--- a/cv/index.html
+++ b/cv/index.html
@@ -4,7 +4,7 @@ title: About Erika Chunzho
 ---
 <div class="cv">
 		<a href="#" class="download" title=""></a>			
-					<h1>Erika CHunzho</h1>
+					<h1>Erika Chunzho</h1>
 					<address>
 					<strong></strong><br>
 					<br>
