--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 layout: default
 title: Erika Chunzho
 ---
-<div class="fstPage"></div>
 <div class="blurb">
+	 class="fstPage"
 	<h1>Hi there, I'm Erika Chunzho!</h1>
 	<p>I'm best known as a <em>AFSE</em> student. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
