--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Erika Chunzho
 ---
 <div class="blurb">
-	 class="fstPage"
+	 <div class="fstPage"></div>
 	<h1>Hi there, I'm Erika Chunzho!</h1>
 	<p>I'm best known as a <em>AFSE</em> student. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
