--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: About Erika Chunzho
 ---
- <div class="fstPage">
+ <div class="fstPage"></div>
 <h1>Hello everyone!</h1>
       
 <p>My name is Erika Chunzho. I am a sophomore in Academy for Software Engineering(AFSE).
@@ -12,4 +12,4 @@ title: About Erika Chunzho
       2017 from the same school. 
       
       </p>
-</div>
+
