--- a/cv/index.html
+++ b/cv/index.html
@@ -2,6 +2,7 @@
 layout: default
 title: About Erika Chunzho
 ---
+ <div class="fstPage">
 <div class="cv">
 		<a href="#" class="download" title=""></a>			
 					<h1>Erika Chunzho</h1>
